<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="#099F91"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/image_reg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/edited_logo"
        android:transitionName="image_logo"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/slogan_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:text="@string/welcome"
        android:fontFamily="@font/bangers"
        android:transitionName="logo_text"
        android:textSize="40sp"
        android:textColor="#7842D8"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_to_start_your_journey"
        android:transitionName="start_msg"
        android:textSize="15sp"
        android:textColor="#000"
        />
    <EditText
        android:id="@+id/fullname_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textSize="24sp"
        android:autofillHints="true" />
    <EditText
        android:id="@+id/email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:autofillHints="true" />
    <EditText
        android:id="@+id/phone_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textSize="24sp"
        android:autofillHints="true" />
    <EditText
        android:id="@+id/password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:autofillHints="true" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="200dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up"
        android:transitionName="button_tran" />
    <Button
        android:id="@+id/gotologin_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="#00000000"
        android:elevation="0dp"
        android:transitionName="login_reg_tran"
        android:text="@string/go_to_login_page"
        android:onClick="goto_login"/>



</LinearLayout>