<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#099F91"
    tools:context=".Login">
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/edited_logo"
        android:layout_marginBottom="5dp"
        android:transitionName="image_logo"
        android:contentDescription="@string/todo" />
    <TextView
    android:id="@+id/logo_msg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/bangers"
    android:text="@string/busfinder_driver"
    android:transitionName="logo_text"
    android:textColor="#7842D8"
    android:textSize="36sp"/>
    <TextView
    android:id="@+id/slogan_msg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:text="@string/sign_in_to_continue"
    android:transitionName="start_msg"
    android:textSize="20sp"
    android:textColor="#000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            android:autofillHints="true" />
        <EditText
            android:id="@+id/password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="24sp"
            android:autofillHints="true" />
        <Button
            android:id="@+id/forgot_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="#00000000"
            android:text="@string/forgot_password"
            android:layout_marginTop="5dp"
            android:elevation="0dp"
            />
        <Button
            android:id="@+id/login_btn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:transitionName="button_tran"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="LoginButton"
            />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:transitionName="login_reg_tran"
            android:text="@string/new_user_sign_up"
            android:onClick="SignUp"/>

    </LinearLayout>

</LinearLayout>